Bug 84345 - Display device not updated on battery removal
Summary: Display device not updated on battery removal
Status: RESOLVED FIXED
Alias: None
Product: upower
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Richard Hughes
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-26 02:17 UTC by Evangelos Foutras
Modified: 2014-10-08 18:35 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Changes in the output of 'upower -d' on battery removal (1.81 KB, text/plain)
2014-09-26 02:17 UTC, Evangelos Foutras
Details

Description Evangelos Foutras 2014-09-26 02:17:10 UTC
Created attachment 106887 [details]
Changes in the output of 'upower -d' on battery removal

After removing the battery from my laptop the battery device is correctly removed but DisplayDevice is not updated to reflect the new state.

Looking at the code, it seems that up_daemon_update_display_battery() should be called on battery removal to update the display device. I've tested under GDB and this function is called multiple times on battery insertion but not at all on removal.

(I've attached the difference in the output of 'upower -d' after removing the battery, which shows that DisplayDevice remains unchanged.)
Comment 1 Evangelos Foutras 2014-10-02 13:20:07 UTC
Posted a tentative fix for this on the mailing list:

http://lists.freedesktop.org/archives/devkit-devel/2014-October/001626.html
Comment 2 Richard Hughes 2014-10-08 18:35:26 UTC
Pushed to master, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.